# sanmoji

./: .eslintrc.json  .gitignore  CHANGELOG.md  LICENSE  README.md  code_review_v1.1.0.md  implementation_plan.md  package-lock.json  package.json
.github/workflows/: ci.yml
src/: index.html
src-tauri/: Cargo.toml  clippy.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: app-commands.toml
src-tauri/src/: ass.rs  commands.rs  ffmpeg_fetch.rs  ffprobe.rs  file_assoc.rs  fonts.rs  lib.rs  main.rs  migration.rs  process_util.rs  project.rs  settings.rs  subtitle.rs  validation.rs  video_stream.rs
src-tauri/src/commands/: common.rs  export.rs  mod.rs  project.rs  subtitle.rs  system.rs  video.rs
src-tauri/windows/: hooks.nsh
src/css/: app.css
src/js/: app-info.js  app.js  autosave.js  constants.js  editor.js  fonts.js  history.js  modal-manager.js  modals.js  overlay.js  preview-render.js  settings-api.js  shortcuts.js  state.js  sync-lyric.js  tauri.js  themes.js  timeline.js  toast.js  utils.js  validation.js
src/js/modals/: _shared.js  about-modal.js  anim-modal.js  batch-modal.js  choice-prompts.js  cut-video-modal.js  export-modal.js  export-progress.js  export-subs-modal.js  find-replace-modal.js  relink-modal.js  scale-timing-modal.js  settings-modal.js  shortcuts-modal.js
tests/: validation.test.js
