[package]
name = "sanmoji"
version = "1.1.1"
edition = "2021"

[lib]
name = "sanmoji_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
sha2 = "0.10"
hex = "0.4"
http = "1"
http-range = "0.1"
percent-encoding = "2"
getrandom = "0.2"
ttf-parser = "0.25"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"

[profile.release]
opt-level = "s"
strip = true
